--- a/package.json
+++ b/package.json
@@ -4,20 +4,35 @@
   "description": "A basic CRUD app using angular 2",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typings": "typings",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
   },
   "author": "Dave Bush",
   "license": "MIT",
   "dependencies": {
-    "angular2": "2.0.0-beta.17",
+    "@angular/common":  "2.0.0-rc.3",
+    "@angular/compiler":  "2.0.0-rc.3",
+    "@angular/core":  "2.0.0-rc.3",
+    "@angular/forms": "0.1.1",
+    "@angular/http":  "2.0.0-rc.3",
+    "@angular/platform-browser":  "2.0.0-rc.3",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.3",
+    "@angular/router":  "3.0.0-alpha.7",
+    "@angular/router-deprecated":  "2.0.0-rc.2",
+    "@angular/upgrade":  "2.0.0-rc.3",
     "body-parser": "^1.15.1",
     "es6-promise": "^3.2.1",
     "es6-shim": "^0.35.1",
     "express": "^4.13.4",
     "mongoose": "^4.4.20",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.8",
-    "systemjs": "0.19.31"
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.27",
+    "core-js": "^2.4.0",
+    "zone.js": "^0.6.12",
+    "angular2-in-memory-web-api": "0.0.12"
   },
   "devDependencies": {
     "concurrently": "^2.1.0",
