--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
   "author": "Dave Bush",
   "license": "MIT",
   "dependencies": {
-    "@angular/common":  "2.0.0-rc.4",
-    "@angular/compiler":  "2.0.0-rc.4",
-    "@angular/core":  "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http":  "2.0.0-rc.4",
-    "@angular/platform-browser":  "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.4",
-    "@angular/router":  "3.0.0-beta.1",
+    "@angular/common":  "2.0.0-rc.5",
+    "@angular/compiler":  "2.0.0-rc.5",
+    "@angular/core":  "2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
+    "@angular/http":  "2.0.0-rc.5",
+    "@angular/platform-browser":  "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.5",
+    "@angular/router":  "3.0.0-rc.1",
     "@angular/router-deprecated":  "2.0.0-rc.2",
-    "@angular/upgrade":  "2.0.0-rc.4",
-    "body-parser": "^1.15.1",
+    "@angular/upgrade":  "2.0.0-rc.5",
+    "body-parser": "^1.15.2",
     "es6-promise": "^3.2.1",
     "es6-shim": "^0.35.1",
-    "express": "^4.13.4",
-    "mongoose": "^4.4.20",
-    "reflect-metadata": "0.1.3",
+    "express": "^4.14.0",
+    "mongoose": "^4.5.8",
+    "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
     "core-js": "^2.4.0",
     "zone.js": "^0.6.12",
-    "angular2-in-memory-web-api": "0.0.14"
+    "angular2-in-memory-web-api": "0.0.15"
   },
   "devDependencies": {
     "concurrently": "^2.1.0",
