--- a/package.json
+++ b/package.json
@@ -4,24 +4,22 @@
   "description": "A basic CRUD app using angular 2",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "typings": "typings",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w"
+    "build": "webpack",
+    "typings": "typings"
   },
   "author": "Dave Bush",
   "license": "MIT",
   "dependencies": {
-    "@angular/common":  "2.0.0-rc.5",
-    "@angular/compiler":  "2.0.0-rc.5",
-    "@angular/core":  "2.0.0-rc.5",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
     "@angular/forms": "0.3.0",
-    "@angular/http":  "2.0.0-rc.5",
-    "@angular/platform-browser":  "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.5",
-    "@angular/router":  "3.0.0-rc.1",
-    "@angular/router-deprecated":  "2.0.0-rc.2",
-    "@angular/upgrade":  "2.0.0-rc.5",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.5",
     "body-parser": "^1.15.2",
     "es6-promise": "^3.2.1",
     "es6-shim": "^0.35.1",
@@ -35,8 +33,23 @@
     "angular2-in-memory-web-api": "0.0.15"
   },
   "devDependencies": {
-    "concurrently": "^2.1.0",
+    "angular2-template-loader": "^0.4.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.15.0",
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.7",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.2",
+    "string-replace-loader": "^1.0.3",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^0.8.1",
     "typescript": "^1.8.10",
-    "typings": "^1.0.5"
+    "typings": "^1.0.5",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.0"
   }
 }
