--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   "author": "Dave Bush",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular/upgrade": "2.0.0-rc.5",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.6",
     "body-parser": "^1.15.2",
     "es6-promise": "^3.2.1",
     "es6-shim": "^0.35.1",
     "express": "^4.14.0",
     "mongoose": "^4.5.8",
     "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.11",
     "systemjs": "0.19.27",
     "core-js": "^2.4.0",
-    "zone.js": "^0.6.12",
-    "angular2-in-memory-web-api": "0.0.15"
+    "zone.js": "^0.6.17",
+    "angular2-in-memory-web-api": "0.0.18"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
@@ -46,7 +46,7 @@
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.10",
-    "typings": "^1.0.5",
+    "typings": "^1.3.2",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0"
