--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   "author": "Dave Bush",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.6",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/forms": "^2.0.0",
+    "@angular/http": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/router": "^3.0.0",
+    "@angular/upgrade": "^2.0.0",
+    "@ngrx/core": "^1.2.0",
+    "angular2-in-memory-web-api": "^0.0.18",
     "body-parser": "^1.15.2",
+    "core-js": "^2.4.0",
     "es6-promise": "^3.2.1",
     "es6-shim": "^0.35.1",
     "express": "^4.14.0",
     "mongoose": "^4.5.8",
-    "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-beta.11",
-    "systemjs": "0.19.27",
-    "core-js": "^2.4.0",
-    "zone.js": "^0.6.17",
-    "angular2-in-memory-web-api": "0.0.18"
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.17"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
