--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "author": "Dave Bush",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/common": "~2.0.2",
+    "@angular/compiler": "~2.0.2",
+    "@angular/core": "~2.0.2",
+    "@angular/forms": "^2.0.2",
+    "@angular/http": "^2.0.2",
+    "@angular/platform-browser": "^2.0.2",
+    "@angular/platform-browser-dynamic": "^2.0.2",
     "@angular/router": "^3.0.0",
-    "@angular/upgrade": "^2.0.0",
     "@ngrx/core": "^1.2.0",
-    "angular2-in-memory-web-api": "^0.0.18",
+    "@ngrx/store": "^2.2.1",
+    "angular2-in-memory-web-api": "^0.0.21",
     "body-parser": "^1.15.2",
     "core-js": "^2.4.0",
     "es6-promise": "^3.2.1",
