--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^2.2.1",
     "body-parser": "^1.15.2",
     "core-js": "^2.4.0",
+    "deep-assign": "^2.0.0",
     "es6-promise": "^3.2.1",
     "es6-shim": "^0.35.1",
     "express": "^4.14.0",
