--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@ngrx/effects": "^2.0.0",
     "angular2-template-loader": "^0.6.0",
     "css-loader": "^0.26.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
@@ -49,7 +49,7 @@
     "ts-loader": "^1.2.2",
     "typescript": "^2.0.10",
     "typings": "^2.0.0",
-    "webpack": "^1.13.3",
+    "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^1.16.2",
     "webpack-merge": "^1.0.1"
   }
